fix: hamburger button on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,10 @@
   --color-accent: #CECECE;
 }
 
+.text-accent {
+  color: var(--color-accent);
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
